// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should render 1`] = `
<Dropdown
  direction="bottom"
  disabled={false}
  helperText=""
  id="test-dropdown"
  itemToElement={null}
  itemToString={[Function]}
  items={
    Array [
      Object {
        "id": "id-0",
        "label": "Item 0",
        "value": 0,
      },
      Object {
        "id": "id-1",
        "label": "Item 1",
        "value": 1,
      },
      Object {
        "id": "id-2",
        "label": "Item 2",
        "value": 2,
      },
      Object {
        "id": "id-3",
        "label": "Item 3",
        "value": 3,
      },
      Object {
        "id": "id-4",
        "label": "Item 4",
        "value": 4,
      },
    ]
  }
  label="input"
  light={false}
  onChange={[MockFunction]}
  placeholder="Filter..."
  titleText=""
  type="default"
>
  <div
    className="cds--dropdown__wrapper cds--list-box__wrapper"
    placeholder="Filter..."
  >
    <ListBox
      className="cds--dropdown"
      disabled={false}
      id="test-dropdown"
      isOpen={false}
      light={false}
      type="default"
    >
      <div
        className="cds--dropdown cds--list-box"
        id="test-dropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={false}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="cds--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          title="input"
          type="button"
        >
          <span
            className="cds--list-box__label"
          >
            input
          </span>
          <ListBoxMenuIcon
            isOpen={false}
            translateWithId={[Function]}
          >
            <div
              className="cds--list-box__menu-icon"
            >
              <ForwardRef(ChevronDown16)
                aria-label="Open menu"
                name="chevron--down"
              >
                <Icon
                  aria-label="Open menu"
                  fill="currentColor"
                  height={16}
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-label="Open menu"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title>
                      Open menu
                    </title>
                  </svg>
                </Icon>
              </ForwardRef(ChevronDown16)>
            </div>
          </ListBoxMenuIcon>
        </button>
        <ListBoxMenu
          aria-labelledby="downshift-0-label"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        >
          <div
            aria-labelledby="downshift-0-label"
            className="cds--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </ListBoxMenu>
      </div>
    </ListBox>
  </div>
</Dropdown>
`;

exports[`Dropdown should render custom item components 1`] = `
<Dropdown
  direction="bottom"
  disabled={false}
  helperText=""
  id="test-dropdown"
  itemToElement={[Function]}
  itemToString={[Function]}
  items={
    Array [
      Object {
        "id": "id-0",
        "label": "Item 0",
        "value": 0,
      },
      Object {
        "id": "id-1",
        "label": "Item 1",
        "value": 1,
      },
      Object {
        "id": "id-2",
        "label": "Item 2",
        "value": 2,
      },
      Object {
        "id": "id-3",
        "label": "Item 3",
        "value": 3,
      },
      Object {
        "id": "id-4",
        "label": "Item 4",
        "value": 4,
      },
    ]
  }
  label="input"
  light={false}
  onChange={[MockFunction]}
  placeholder="Filter..."
  titleText=""
  type="default"
>
  <div
    className="cds--dropdown__wrapper cds--list-box__wrapper"
    placeholder="Filter..."
  >
    <ListBox
      className="cds--dropdown cds--dropdown--open"
      disabled={false}
      id="test-dropdown"
      isOpen={true}
      light={false}
      type="default"
    >
      <div
        className="cds--dropdown cds--dropdown--open cds--list-box cds--list-box--expanded"
        id="test-dropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="cds--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          title="input"
          type="button"
        >
          <span
            className="cds--list-box__label"
          >
            input
          </span>
          <ListBoxMenuIcon
            isOpen={true}
            translateWithId={[Function]}
          >
            <div
              className="cds--list-box__menu-icon cds--list-box__menu-icon--open"
            >
              <ForwardRef(ChevronDown16)
                aria-label="Close menu"
                name="chevron--down"
              >
                <Icon
                  aria-label="Close menu"
                  fill="currentColor"
                  height={16}
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-label="Close menu"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title>
                      Close menu
                    </title>
                  </svg>
                </Icon>
              </ForwardRef(ChevronDown16)>
            </div>
          </ListBoxMenuIcon>
        </button>
        <ListBoxMenu
          aria-labelledby="downshift-0-label"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        >
          <div
            aria-labelledby="downshift-0-label"
            className="cds--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          >
            <ListBoxMenuItem
              aria-selected="false"
              id="downshift-0-item-0"
              isActive={false}
              isHighlighted={false}
              key="downshift-0-item-0"
              onClick={[Function]}
              onMouseMove={[Function]}
              role="option"
            >
              <div
                aria-selected="false"
                className="cds--list-box__menu-item"
                id="downshift-0-item-0"
                onClick={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <div
                  className="cds--list-box__menu-item__option"
                >
                  <itemToElement
                    id="id-0"
                    key="downshift-0-item-0"
                    label="Item 0"
                    value={0}
                  >
                    <div
                      className="mock-item"
                    >
                      Item 0
                    </div>
                  </itemToElement>
                </div>
              </div>
            </ListBoxMenuItem>
            <ListBoxMenuItem
              aria-selected="false"
              id="downshift-0-item-1"
              isActive={false}
              isHighlighted={false}
              key="downshift-0-item-1"
              onClick={[Function]}
              onMouseMove={[Function]}
              role="option"
            >
              <div
                aria-selected="false"
                className="cds--list-box__menu-item"
                id="downshift-0-item-1"
                onClick={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <div
                  className="cds--list-box__menu-item__option"
                >
                  <itemToElement
                    id="id-1"
                    key="downshift-0-item-1"
                    label="Item 1"
                    value={1}
                  >
                    <div
                      className="mock-item"
                    >
                      Item 1
                    </div>
                  </itemToElement>
                </div>
              </div>
            </ListBoxMenuItem>
            <ListBoxMenuItem
              aria-selected="false"
              id="downshift-0-item-2"
              isActive={false}
              isHighlighted={false}
              key="downshift-0-item-2"
              onClick={[Function]}
              onMouseMove={[Function]}
              role="option"
            >
              <div
                aria-selected="false"
                className="cds--list-box__menu-item"
                id="downshift-0-item-2"
                onClick={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <div
                  className="cds--list-box__menu-item__option"
                >
                  <itemToElement
                    id="id-2"
                    key="downshift-0-item-2"
                    label="Item 2"
                    value={2}
                  >
                    <div
                      className="mock-item"
                    >
                      Item 2
                    </div>
                  </itemToElement>
                </div>
              </div>
            </ListBoxMenuItem>
            <ListBoxMenuItem
              aria-selected="false"
              id="downshift-0-item-3"
              isActive={false}
              isHighlighted={false}
              key="downshift-0-item-3"
              onClick={[Function]}
              onMouseMove={[Function]}
              role="option"
            >
              <div
                aria-selected="false"
                className="cds--list-box__menu-item"
                id="downshift-0-item-3"
                onClick={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <div
                  className="cds--list-box__menu-item__option"
                >
                  <itemToElement
                    id="id-3"
                    key="downshift-0-item-3"
                    label="Item 3"
                    value={3}
                  >
                    <div
                      className="mock-item"
                    >
                      Item 3
                    </div>
                  </itemToElement>
                </div>
              </div>
            </ListBoxMenuItem>
            <ListBoxMenuItem
              aria-selected="false"
              id="downshift-0-item-4"
              isActive={false}
              isHighlighted={false}
              key="downshift-0-item-4"
              onClick={[Function]}
              onMouseMove={[Function]}
              role="option"
            >
              <div
                aria-selected="false"
                className="cds--list-box__menu-item"
                id="downshift-0-item-4"
                onClick={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <div
                  className="cds--list-box__menu-item__option"
                >
                  <itemToElement
                    id="id-4"
                    key="downshift-0-item-4"
                    label="Item 4"
                    value={4}
                  >
                    <div
                      className="mock-item"
                    >
                      Item 4
                    </div>
                  </itemToElement>
                </div>
              </div>
            </ListBoxMenuItem>
          </div>
        </ListBoxMenu>
      </div>
    </ListBox>
  </div>
</Dropdown>
`;

exports[`Dropdown should render with strings as items 1`] = `
<Dropdown
  direction="bottom"
  disabled={false}
  helperText=""
  id="test-dropdown"
  itemToElement={null}
  itemToString={[Function]}
  items={
    Array [
      "zar",
      "doz",
    ]
  }
  label="input"
  light={false}
  onChange={[MockFunction]}
  placeholder="Filter..."
  titleText=""
  type="default"
>
  <div
    className="cds--dropdown__wrapper cds--list-box__wrapper"
    placeholder="Filter..."
  >
    <ListBox
      className="cds--dropdown cds--dropdown--open"
      disabled={false}
      id="test-dropdown"
      isOpen={true}
      light={false}
      type="default"
    >
      <div
        className="cds--dropdown cds--dropdown--open cds--list-box cds--list-box--expanded"
        id="test-dropdown"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <button
          aria-disabled={false}
          aria-expanded={true}
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label downshift-0-toggle-button"
          className="cds--list-box__field"
          disabled={false}
          id="downshift-0-toggle-button"
          onClick={[Function]}
          onKeyDown={[Function]}
          title="input"
          type="button"
        >
          <span
            className="cds--list-box__label"
          >
            input
          </span>
          <ListBoxMenuIcon
            isOpen={true}
            translateWithId={[Function]}
          >
            <div
              className="cds--list-box__menu-icon cds--list-box__menu-icon--open"
            >
              <ForwardRef(ChevronDown16)
                aria-label="Close menu"
                name="chevron--down"
              >
                <Icon
                  aria-label="Close menu"
                  fill="currentColor"
                  height={16}
                  name="chevron--down"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 16 16"
                  width={16}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <svg
                    aria-label="Close menu"
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title>
                      Close menu
                    </title>
                  </svg>
                </Icon>
              </ForwardRef(ChevronDown16)>
            </div>
          </ListBoxMenuIcon>
        </button>
        <ListBoxMenu
          aria-labelledby="downshift-0-label"
          id="downshift-0-menu"
          onBlur={[Function]}
          onKeyDown={[Function]}
          onMouseLeave={[Function]}
          role="listbox"
          tabIndex={-1}
        >
          <div
            aria-labelledby="downshift-0-label"
            className="cds--list-box__menu"
            id="downshift-0-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          >
            <ListBoxMenuItem
              aria-selected="false"
              id="downshift-0-item-0"
              isActive={false}
              isHighlighted={false}
              key="downshift-0-item-0"
              onClick={[Function]}
              onMouseMove={[Function]}
              role="option"
            >
              <div
                aria-selected="false"
                className="cds--list-box__menu-item"
                id="downshift-0-item-0"
                onClick={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <div
                  className="cds--list-box__menu-item__option"
                >
                  zar
                </div>
              </div>
            </ListBoxMenuItem>
            <ListBoxMenuItem
              aria-selected="false"
              id="downshift-0-item-1"
              isActive={false}
              isHighlighted={false}
              key="downshift-0-item-1"
              onClick={[Function]}
              onMouseMove={[Function]}
              role="option"
            >
              <div
                aria-selected="false"
                className="cds--list-box__menu-item"
                id="downshift-0-item-1"
                onClick={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <div
                  className="cds--list-box__menu-item__option"
                >
                  doz
                </div>
              </div>
            </ListBoxMenuItem>
          </div>
        </ListBoxMenu>
      </div>
    </ListBox>
  </div>
</Dropdown>
`;
